AIStableDiffusion before cleaning

--- a/TrAISformer/jupyter_notebooks/test.ipynb
+++ b/TrAISformer/jupyter_notebooks/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,15 +137,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "144\n",
-      "104\n"
+      "6\n",
+      "0\n"
      ]
     }
    ],
@@ -153,8 +153,8 @@
     "max_len = 0\n",
     "max_i = -1\n",
     "for i in range(len(l_pred_errors)):\n",
-    "    if len(l_pred_errors[i][\"traj\"]) > max_len:\n",
-    "        max_len = len(l_pred_errors[i][\"traj\"])\n",
+    "    if len(l_pred_errors[i][\"traj\"][0]) > max_len:\n",
+    "        max_len = len(l_pred_errors[i][\"traj\"][0])\n",
     "        max_i = i\n",
     "print(max_len)\n",
     "print(max_i)"
@@ -216,6 +216,33 @@
    ],
    "source": [
     "len(l_pred_errors[213])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.917802  , 0.9193368 , 0.921468  , 0.9258992 , 0.9307308 ,\n",
+       "       0.93537011, 0.9365832 , 0.9328088 , 0.923655  , 0.91382971,\n",
+       "       0.90425389, 0.89887064, 0.89829077, 0.8941532 , 0.8916352 ,\n",
+       "       0.8888048 , 0.88642444, 0.88401745, 0.8815608 , 0.878882  ,\n",
+       "       0.876078  , 0.87321067, 0.8705408 , 0.8679192 , 0.86515974,\n",
+       "       0.86241975, 0.85984234, 0.85753898, 0.85510461, 0.85122   ,\n",
+       "       0.8474364 , 0.8443152 , 0.8411414 , 0.84718366, 0.85651044,\n",
+       "       0.8670752 , 0.87058076, 0.8712752 ])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l_pred_errors[i][\"traj\"][:,0]"
    ]
   },
   {
