improved preprocessor. But trajectory scale should be refined

--- a/FishingBoatsPrediction/src/notebooks/dataset_preparation.ipynb
+++ b/FishingBoatsPrediction/src/notebooks/dataset_preparation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
        "16  108672075  2023-05-01 19:29:34  34.900930  122.458950  0.7  132.0      511"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
        "14  329.500000    511.0  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -783,7 +783,7 @@
        "5   45.639043    511.0  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -803,7 +803,7 @@
        "34.8693848889765"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1303,6 +1303,338 @@
     "new_lat_lon = np.array([ecef_to_geodetic(x, y, z)[:2] for x, y, z in new_ecef_coords])\n",
     "good_sequence[['Latitude ROTATED 2', 'Longitude ROTATED 2']] = new_lat_lon\n",
     "good_sequence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sampled_Date</th>\n",
+       "      <th>MMSI</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>SOG</th>\n",
+       "      <th>COG</th>\n",
+       "      <th>Heading</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023-05-01 17:50:00</td>\n",
+       "      <td>108672075.0</td>\n",
+       "      <td>34.833924</td>\n",
+       "      <td>122.443538</td>\n",
+       "      <td>5.482620</td>\n",
+       "      <td>358.056485</td>\n",
+       "      <td>511.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2023-05-01 18:00:00</td>\n",
+       "      <td>108672075.0</td>\n",
+       "      <td>34.849788</td>\n",
+       "      <td>122.443464</td>\n",
+       "      <td>5.626130</td>\n",
+       "      <td>358.420434</td>\n",
+       "      <td>511.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2023-05-01 18:10:00</td>\n",
+       "      <td>108672075.0</td>\n",
+       "      <td>34.865816</td>\n",
+       "      <td>122.443370</td>\n",
+       "      <td>5.788879</td>\n",
+       "      <td>358.962929</td>\n",
+       "      <td>511.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2023-05-01 18:20:00</td>\n",
+       "      <td>108672075.0</td>\n",
+       "      <td>34.881622</td>\n",
+       "      <td>122.446905</td>\n",
+       "      <td>5.627202</td>\n",
+       "      <td>215.189258</td>\n",
+       "      <td>511.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2023-05-01 18:30:00</td>\n",
+       "      <td>108672075.0</td>\n",
+       "      <td>34.897411</td>\n",
+       "      <td>122.450706</td>\n",
+       "      <td>5.441731</td>\n",
+       "      <td>60.830680</td>\n",
+       "      <td>511.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2023-05-01 18:40:00</td>\n",
+       "      <td>108672075.0</td>\n",
+       "      <td>34.904846</td>\n",
+       "      <td>122.455105</td>\n",
+       "      <td>4.144119</td>\n",
+       "      <td>45.639043</td>\n",
+       "      <td>511.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Sampled_Date         MMSI   Latitude   Longitude       SOG  \\\n",
+       "0 2023-05-01 17:50:00  108672075.0  34.833924  122.443538  5.482620   \n",
+       "1 2023-05-01 18:00:00  108672075.0  34.849788  122.443464  5.626130   \n",
+       "2 2023-05-01 18:10:00  108672075.0  34.865816  122.443370  5.788879   \n",
+       "3 2023-05-01 18:20:00  108672075.0  34.881622  122.446905  5.627202   \n",
+       "4 2023-05-01 18:30:00  108672075.0  34.897411  122.450706  5.441731   \n",
+       "5 2023-05-01 18:40:00  108672075.0  34.904846  122.455105  4.144119   \n",
+       "\n",
+       "          COG  Heading  \n",
+       "0  358.056485    511.0  \n",
+       "1  358.420434    511.0  \n",
+       "2  358.962929    511.0  \n",
+       "3  215.189258    511.0  \n",
+       "4   60.830680    511.0  \n",
+       "5   45.639043    511.0  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "good_sequence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.00000000e+00 8.66025404e-01 7.07106781e-01 5.00000000e-01\n",
+      " 6.12323400e-17]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "# print(np.cos(np.radians(0)))\n",
+    "# print(np.cos(np.radians(45)))\n",
+    "# print(np.cos(np.radians(90)))\n",
+    "# print(np.cos(np.radians(180)))\n",
+    "# print(np.cos(np.radians(270)))\n",
+    "print(np.cos(np.array((0., 30., 45., 60., 90.)) * np.pi / 180. ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sampled_Date</th>\n",
+       "      <th>MMSI</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>SOG</th>\n",
+       "      <th>COG</th>\n",
+       "      <th>Heading</th>\n",
+       "      <th>Pseudo Longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023-05-01 17:50:00</td>\n",
+       "      <td>108672075.0</td>\n",
+       "      <td>34.833924</td>\n",
+       "      <td>122.443538</td>\n",
+       "      <td>5.482620</td>\n",
+       "      <td>358.056485</td>\n",
+       "      <td>511.0</td>\n",
+       "      <td>122.443508</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2023-05-01 18:00:00</td>\n",
+       "      <td>108672075.0</td>\n",
+       "      <td>34.849788</td>\n",
+       "      <td>122.443464</td>\n",
+       "      <td>5.626130</td>\n",
+       "      <td>358.420434</td>\n",
+       "      <td>511.0</td>\n",
+       "      <td>122.443447</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2023-05-01 18:10:00</td>\n",
+       "      <td>108672075.0</td>\n",
+       "      <td>34.865816</td>\n",
+       "      <td>122.443370</td>\n",
+       "      <td>5.788879</td>\n",
+       "      <td>358.962929</td>\n",
+       "      <td>511.0</td>\n",
+       "      <td>122.443370</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2023-05-01 18:20:00</td>\n",
+       "      <td>108672075.0</td>\n",
+       "      <td>34.881622</td>\n",
+       "      <td>122.446905</td>\n",
+       "      <td>5.627202</td>\n",
+       "      <td>215.189258</td>\n",
+       "      <td>511.0</td>\n",
+       "      <td>122.446270</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2023-05-01 18:30:00</td>\n",
+       "      <td>108672075.0</td>\n",
+       "      <td>34.897411</td>\n",
+       "      <td>122.450706</td>\n",
+       "      <td>5.441731</td>\n",
+       "      <td>60.830680</td>\n",
+       "      <td>511.0</td>\n",
+       "      <td>122.449387</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2023-05-01 18:40:00</td>\n",
+       "      <td>108672075.0</td>\n",
+       "      <td>34.904846</td>\n",
+       "      <td>122.455105</td>\n",
+       "      <td>4.144119</td>\n",
+       "      <td>45.639043</td>\n",
+       "      <td>511.0</td>\n",
+       "      <td>122.452994</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Sampled_Date         MMSI   Latitude   Longitude       SOG  \\\n",
+       "0 2023-05-01 17:50:00  108672075.0  34.833924  122.443538  5.482620   \n",
+       "1 2023-05-01 18:00:00  108672075.0  34.849788  122.443464  5.626130   \n",
+       "2 2023-05-01 18:10:00  108672075.0  34.865816  122.443370  5.788879   \n",
+       "3 2023-05-01 18:20:00  108672075.0  34.881622  122.446905  5.627202   \n",
+       "4 2023-05-01 18:30:00  108672075.0  34.897411  122.450706  5.441731   \n",
+       "5 2023-05-01 18:40:00  108672075.0  34.904846  122.455105  4.144119   \n",
+       "\n",
+       "          COG  Heading  Pseudo Longitude  \n",
+       "0  358.056485    511.0        122.443508  \n",
+       "1  358.420434    511.0        122.443447  \n",
+       "2  358.962929    511.0        122.443370  \n",
+       "3  215.189258    511.0        122.446270  \n",
+       "4   60.830680    511.0        122.449387  \n",
+       "5   45.639043    511.0        122.452994  "
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "good_sequence[\"Pseudo Longitude\"] = good_sequence[\"Longitude\"].min() + (good_sequence[\"Longitude\"] - good_sequence[\"Longitude\"].min()) * np.cos(np.radians(good_sequence[\"Latitude\"]))\n",
+    "good_sequence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sign(-100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    1.000000\n",
+       "1    1.000000\n",
+       "2    1.000000\n",
+       "3    1.000000\n",
+       "4    1.000000\n",
+       "5    0.828824\n",
+       "Name: SOG, dtype: float64"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "((good_sequence[\"SOG\"] / 5 < 1) * good_sequence[\"SOG\"] / 5) + (good_sequence[\"SOG\"] / 5 > 1)"
    ]
   },
   {
