test_model works now

--- a/FishingBoatsPrediction/fishingboatsprediction/notebooks/test_output.ipynb
+++ b/FishingBoatsPrediction/fishingboatsprediction/notebooks/test_output.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,26 +11,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"../../results/test_1/all_samples.pkl\", \"rb\") as f:\n",
+    "with open(\"../../results/test_1/20250414_201529/all_test_samples.pkl\", \"rb\") as f:\n",
     "    data = pickle.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2, 16, 624)"
+       "(2, 16, 88)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,16 +41,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(16, 624)"
+       "(16, 88)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,22 +61,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1., 0., 0., ..., 0., 0., 0.],\n",
+       "array([[0., 0., 0., ..., 0., 0., 0.],\n",
        "       [0., 0., 0., ..., 0., 0., 0.],\n",
        "       [0., 0., 0., ..., 0., 0., 0.],\n",
        "       ...,\n",
        "       [0., 0., 0., ..., 0., 0., 0.],\n",
-       "       [0., 0., 0., ..., 0., 0., 0.],\n",
-       "       [0., 0., 0., ..., 0., 0., 0.]], dtype=float32)"
+       "       [0., 0., 1., ..., 0., 0., 0.],\n",
+       "       [1., 0., 0., ..., 0., 0., 0.]], dtype=float32)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,178 +87,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-2.37942472e-01,  1.56527102e-01, -7.76220579e-03,  2.66809994e-03,\n",
-       "        8.99594873e-02,  5.92367947e-01,  1.52628243e-01, -2.23171964e-01,\n",
-       "        1.64145112e-01, -2.20683888e-01, -3.04641277e-01,  2.64909893e-01,\n",
-       "        7.21187070e-02, -1.11560114e-02,  1.45883739e-01,  4.43768084e-01,\n",
-       "       -7.92122632e-02,  2.35623032e-01,  2.14971736e-01, -2.56655186e-01,\n",
-       "       -2.67125756e-01,  1.97082564e-01,  8.63807261e-01,  3.82679671e-01,\n",
-       "        1.09670766e-01,  1.43455848e-01,  1.38127565e-01,  4.48896140e-01,\n",
-       "       -1.05820140e-02, -4.55119669e-01, -2.66429782e-01,  1.19648360e-01,\n",
-       "        3.80224824e-01, -5.55755161e-02, -2.51874954e-01,  1.30559564e-01,\n",
-       "        1.94958016e-01,  2.20383689e-01, -8.78608674e-02, -6.25335127e-02,\n",
-       "        2.55986750e-01, -3.33828256e-02,  5.64051688e-01,  1.91199705e-01,\n",
-       "        9.66489241e-02, -4.05281372e-02,  8.11696276e-02,  2.01162145e-01,\n",
-       "        1.75018832e-01, -3.16545181e-02, -2.34442785e-01,  5.83352268e-01,\n",
-       "        3.65098685e-01,  9.47322324e-02,  4.67538863e-01,  2.52992392e-01,\n",
-       "        5.10916591e-01,  2.57928044e-01, -4.60799187e-02,  7.74391368e-02,\n",
-       "        2.17388079e-01,  4.33468372e-02, -3.58815826e-02, -2.28265584e-01,\n",
-       "        7.70258978e-02, -2.68196203e-02, -3.32261622e-01,  2.33631194e-01,\n",
-       "       -1.45889759e-01,  3.01663697e-01,  1.32630989e-01, -8.19123313e-02,\n",
-       "        1.68391481e-01, -6.45497814e-02,  7.22565278e-02,  3.01689565e-01,\n",
-       "        7.02923443e-03,  1.53602242e-01, -2.19938308e-01,  1.90845788e-01,\n",
-       "        8.99861902e-02, -5.58592565e-02,  4.70312923e-01, -1.40086308e-01,\n",
-       "       -1.87513698e-02,  6.82926416e-01,  3.15920949e-01,  1.03201158e-01,\n",
-       "        9.24102142e-02, -3.74330282e-01, -3.72177333e-01,  6.26640320e-02,\n",
-       "        3.55683893e-01,  3.07810783e-01,  2.37402231e-01,  2.50795096e-01,\n",
-       "        3.06352466e-01,  1.74813122e-01,  1.07007511e-01, -3.82579893e-01,\n",
-       "       -3.26138623e-02,  1.44549797e-03, -2.39990920e-01, -2.60611475e-01,\n",
-       "        1.55840918e-01,  3.60495485e-02, -5.04793320e-03,  2.06515878e-01,\n",
-       "        1.95220150e-02, -4.42554504e-01, -2.35785410e-01, -3.98705810e-01,\n",
-       "       -3.25232483e-02, -4.04947937e-01, -2.51129985e-01,  4.86339301e-01,\n",
-       "        3.64548445e-01,  6.02478869e-02, -8.05467833e-03, -8.36726278e-02,\n",
-       "        2.33043581e-01, -6.24830499e-02, -4.39028531e-01, -1.59760669e-01,\n",
-       "        1.97535038e-01, -1.54303640e-01, -3.98205101e-01,  1.85150690e-02,\n",
-       "       -3.45288396e-01, -4.98203427e-01,  4.23614085e-01,  1.49113640e-01,\n",
-       "       -1.91557392e-01,  1.33656994e-01,  5.90749756e-02,  1.47523247e-02,\n",
-       "        8.53128061e-02, -1.79186404e-01,  3.88678163e-01,  3.29136610e-01,\n",
-       "        1.10769644e-01,  3.62795621e-01,  1.65234551e-01, -5.34783006e-01,\n",
-       "       -2.96495974e-01, -1.42083004e-01,  9.39448625e-02, -9.27429125e-02,\n",
-       "       -1.32132456e-01,  1.81036457e-01,  1.56961322e-01, -5.37242629e-02,\n",
-       "        1.34807765e-01,  1.03497326e-01,  2.59577602e-01,  2.25444719e-01,\n",
-       "        1.22077040e-01, -1.09003603e-01, -5.08777380e-01, -1.42964628e-02,\n",
-       "        2.42539048e-01,  3.12724143e-01,  1.17853947e-01, -3.44077349e-01,\n",
-       "       -6.63480163e-02,  2.35701248e-01,  3.33487630e-01, -1.22942433e-01,\n",
-       "        3.40476185e-01,  9.72967744e-02,  5.82422614e-01,  3.64522964e-01,\n",
-       "        8.68749693e-02,  1.36574596e-01, -4.98645985e-03,  1.99619651e-01,\n",
-       "        7.43713379e-02, -1.28206506e-01,  7.88930282e-02, -7.50354771e-03,\n",
-       "        1.98100954e-01, -1.09096862e-01,  3.22913527e-01,  4.17597413e-01,\n",
-       "       -1.95342198e-01,  1.53584957e-01,  9.36384648e-02, -2.86226511e-01,\n",
-       "       -1.17886826e-01,  6.81135580e-02,  1.53502211e-01,  2.87551761e-01,\n",
-       "       -1.37098819e-01, -2.60533512e-01,  6.01443589e-01, -2.80732542e-01,\n",
-       "       -5.27299464e-01, -1.35815918e-01,  4.77255464e-01, -2.98705667e-01,\n",
-       "        1.35966673e-01, -4.34541702e-02, -5.38568497e-02,  3.07409197e-01,\n",
-       "       -2.92089228e-02, -2.54536003e-01, -3.95818681e-01, -2.36675099e-01,\n",
-       "        1.83494538e-01, -1.37094520e-02,  6.35286421e-02, -1.98974267e-01,\n",
-       "        3.72738302e-01, -2.07867756e-01,  2.51177698e-01, -8.37764665e-02,\n",
-       "        1.57938421e-01, -4.24888104e-01,  5.10854274e-02,  1.02099292e-01,\n",
-       "        4.89845902e-01,  2.03638196e-01,  2.07841232e-01, -7.48047158e-02,\n",
-       "        1.30325019e-01,  3.45634967e-01,  2.15642869e-01,  8.95149708e-02,\n",
-       "       -4.63939786e-01,  8.29446971e-01,  9.82852839e-03, -5.17475724e-01,\n",
-       "       -2.95517236e-01,  4.19153780e-01,  1.49843395e-01,  1.20459139e-01,\n",
-       "        6.41829297e-02, -3.06410436e-02,  3.16133529e-01, -5.07032335e-01,\n",
-       "       -2.06801966e-01,  3.12916040e-01, -2.32281629e-02, -4.20237631e-01,\n",
-       "        2.89882511e-01,  9.82751101e-02,  2.96773881e-01, -1.34610295e-01,\n",
-       "       -2.68029392e-01, -3.03363293e-01,  3.33756685e-01, -4.26861376e-01,\n",
-       "       -3.79540801e-01,  9.39160287e-02,  5.30470252e-01, -1.99257389e-01,\n",
-       "       -4.32687163e-01,  2.31174886e-01, -9.98769775e-02,  2.75771916e-01,\n",
-       "        5.59165835e-01, -1.91739947e-01, -4.89188850e-01, -8.72831345e-01,\n",
-       "        5.61926328e-02,  3.57834607e-01, -5.30744977e-02,  2.52113938e-01,\n",
-       "       -1.33261815e-01,  5.58607996e-01,  2.81262368e-01, -4.40526418e-02,\n",
-       "        1.22050896e-01, -2.31801923e-02,  6.56596571e-02, -1.81314796e-01,\n",
-       "        2.43328750e-01,  7.25920275e-02, -1.67020589e-01,  5.42223342e-02,\n",
-       "       -1.44840345e-01, -2.83884764e-01, -3.02722752e-01, -7.18043745e-02,\n",
-       "       -3.68756242e-02, -3.57740700e-01,  2.12108530e-02,  5.26916794e-02,\n",
-       "       -7.90182352e-02,  3.29891235e-01,  1.33971199e-01,  2.81955183e-01,\n",
-       "       -2.69018859e-01, -8.32561493e-01, -1.80662856e-01, -7.06691027e-01,\n",
-       "        6.84619844e-01, -9.28913280e-02,  4.34499532e-01,  1.04308978e-01,\n",
-       "       -1.30625874e-01,  6.23868823e-01,  6.18255556e-01,  2.02296861e-02,\n",
-       "       -3.83374724e-03,  5.80135703e-01,  3.74055415e-01, -2.97369421e-01,\n",
-       "       -6.18183520e-03, -1.35923952e-01,  1.73680648e-01, -1.23297945e-01,\n",
-       "       -1.27791464e-01, -1.46091253e-01,  1.72964260e-01,  1.02648757e-01,\n",
-       "       -3.72781396e-01, -3.14080566e-02, -2.08788171e-01, -1.44060865e-01,\n",
-       "       -1.96676925e-01,  9.90606025e-02,  1.23161525e-01, -2.50398487e-01,\n",
-       "       -8.11326802e-02, -2.37769619e-01, -2.07054719e-01, -8.95486698e-02,\n",
-       "       -9.95448381e-02,  3.30951482e-01,  1.30534768e-01, -2.52980858e-01,\n",
-       "       -1.38878658e-01, -2.02850983e-01, -1.66365400e-01,  5.50311850e-03,\n",
-       "        4.46134508e-01,  1.49478555e-01,  2.66409010e-01,  2.15687603e-01,\n",
-       "        8.38339031e-02,  5.86730003e-01,  6.80466354e-01,  2.52174735e-01,\n",
-       "        3.43813062e-01,  2.62285322e-01,  4.38438475e-01,  6.37020946e-01,\n",
-       "       -2.17542157e-01, -1.61180019e-01,  2.48490721e-01, -2.21355960e-01,\n",
-       "        2.22185086e-02,  7.52594098e-02,  1.71645969e-01,  3.06637641e-02,\n",
-       "        9.58274826e-02,  7.20946789e-02,  2.89318711e-01,  1.22671193e-02,\n",
-       "       -1.41490355e-01,  6.41318858e-01,  5.07506490e-01, -3.15551125e-02,\n",
-       "       -2.03424141e-01,  3.64672959e-01,  1.27333030e-01, -4.76063974e-02,\n",
-       "        9.73297954e-02,  3.73122722e-01, -2.06999987e-01, -3.61768603e-02,\n",
-       "       -2.11367741e-01, -2.78214604e-01, -1.14772953e-01,  1.72483981e-01,\n",
-       "        3.36119950e-01,  1.33975744e-01, -3.07589293e-01, -1.07890338e-01,\n",
-       "       -7.78499171e-02, -1.39547035e-01,  9.42163840e-02,  1.09728456e-01,\n",
-       "       -2.59561718e-01,  7.35991523e-02,  1.87233657e-01,  3.16339284e-01,\n",
-       "        2.09714249e-01,  2.05151394e-01, -1.87761784e-01,  4.97694254e-01,\n",
-       "        3.27771269e-02, -2.60806650e-01,  5.77461600e-01, -2.04632491e-01,\n",
-       "       -4.96775620e-02,  1.38408512e-01,  6.55808151e-01, -1.88646585e-01,\n",
-       "        6.29197836e-01, -2.18914211e-01,  9.85831693e-02, -2.67834187e-01,\n",
-       "        3.59052807e-01, -2.93112814e-01,  3.38189341e-02, -2.10646708e-02,\n",
-       "        2.82430202e-02, -2.76045471e-01, -1.48824543e-01,  1.95301056e-01,\n",
-       "        4.16782379e-01, -8.30736361e-04, -9.00570676e-02, -2.75091492e-02,\n",
-       "       -2.42794156e-01, -9.15328562e-02, -9.31524336e-02,  3.03100973e-01,\n",
-       "       -1.51454002e-01,  1.89301491e-01, -5.50846100e-01,  1.33138105e-01,\n",
-       "        8.29614475e-02,  5.70157766e-01,  4.82177943e-01, -3.11920792e-02,\n",
-       "        2.59972632e-01,  5.90181313e-02,  3.73114347e-01, -9.22371671e-02,\n",
-       "       -1.95774689e-01,  3.70190814e-02,  1.10933587e-01, -1.51113659e-01,\n",
-       "       -5.59756160e-02,  1.93465725e-01, -8.63681175e-03, -5.32647967e-03,\n",
-       "        4.75518972e-01,  5.28096020e-01,  4.57915843e-01,  5.05531691e-02,\n",
-       "        4.46319073e-01,  3.20863336e-01,  4.39927161e-01,  8.86195242e-01,\n",
-       "        4.14167255e-01,  2.60848757e-02, -5.34056187e-01,  2.38400578e-01,\n",
-       "        1.56904489e-01, -5.45710251e-02, -1.20553985e-01,  5.20919785e-02,\n",
-       "       -1.37727447e-02,  1.91275999e-01, -8.66564959e-02,  4.03745949e-01,\n",
-       "        4.17150632e-02,  4.85830694e-01,  7.60674998e-02,  3.88446636e-02,\n",
-       "       -5.28086163e-03,  6.74972013e-02,  6.16496392e-02,  3.14688385e-01,\n",
-       "        4.23891813e-01,  9.52677131e-02, -3.51092130e-01, -1.84355810e-01,\n",
-       "       -3.45383883e-01, -9.35732797e-02,  3.64050448e-01,  2.92827159e-01,\n",
-       "        1.43861502e-01,  2.88401227e-02,  1.06288224e-01,  8.66959803e-03,\n",
-       "       -4.66859601e-02,  5.73186994e-01,  3.41817662e-02,  3.13179582e-01,\n",
-       "       -6.98221335e-03, -7.15443969e-01,  3.21503937e-01, -1.90734088e-01,\n",
-       "       -7.02790217e-03, -2.38480978e-02,  6.73886910e-02, -8.45171735e-02,\n",
-       "       -1.48490518e-01,  8.08786526e-02,  6.91184890e-04,  3.22416574e-02,\n",
-       "        8.16664457e-01,  4.82183337e-01, -3.94886255e-01, -1.19585864e-01,\n",
-       "        3.06542337e-01, -5.16171157e-02, -1.52872115e-01,  3.33679348e-01,\n",
-       "        4.83170807e-01,  1.37728050e-01, -3.35330337e-01, -1.79640904e-01,\n",
-       "        3.26321051e-02,  1.44925658e-02,  1.75176188e-01,  6.18424058e-01,\n",
-       "       -3.93644899e-01,  9.81825292e-02,  5.12816489e-01, -2.70751528e-02,\n",
-       "       -1.75219979e-02, -3.88955325e-02,  1.03973188e-01,  2.87195325e-01,\n",
-       "        6.06573597e-02,  1.24060407e-01,  5.75384572e-02, -4.26132651e-03,\n",
-       "       -1.16137169e-01,  3.97460818e-01,  4.47399199e-01,  2.88061351e-01,\n",
-       "       -4.04959396e-02,  3.30633409e-02, -5.37728846e-01,  2.73775965e-01,\n",
-       "        5.01195848e-01,  9.53942016e-02,  5.58238983e-01,  9.41018343e-01,\n",
-       "        4.68580812e-01,  5.90314120e-02,  6.23287082e-01,  2.43090048e-01,\n",
-       "        5.33732057e-01,  2.30786979e-01, -6.39622390e-01,  1.09466203e-01,\n",
-       "       -3.90549451e-01, -1.84994131e-01, -1.53113883e-02,  1.15337893e-01,\n",
-       "       -8.96287188e-02, -2.99511790e-01,  2.84433186e-01, -1.49379209e-01,\n",
-       "       -1.00240409e-01,  6.43873096e-01,  2.34301373e-01,  2.63558984e-01,\n",
-       "        3.23088408e-01,  4.62174207e-01,  3.99438381e-01, -2.73342997e-01,\n",
-       "        5.27472258e-01,  2.94994205e-01, -3.25315036e-02,  1.97530091e-01,\n",
-       "       -5.16998433e-02,  4.26482297e-02, -3.56582314e-01,  7.57202432e-02,\n",
-       "        6.70062542e-01,  1.09849468e-01, -5.55146337e-02,  5.26897535e-02,\n",
-       "        1.40278906e-01,  9.58053544e-02,  3.26428235e-01, -3.35643053e-01,\n",
-       "        2.03664914e-01,  1.46682978e-01,  3.63660961e-01,  4.08373803e-01,\n",
-       "        3.88740748e-01, -3.57697368e-01, -2.76213080e-01,  4.91060406e-01,\n",
-       "       -2.28182003e-01, -1.38805494e-01, -7.54404534e-03,  4.65820104e-01,\n",
-       "        3.57733458e-01, -2.69196808e-01,  2.77190030e-01, -5.43778658e-01,\n",
-       "        2.44853735e-01, -4.56998646e-02,  1.27745345e-01,  1.53390855e-01,\n",
-       "        5.18530667e-01, -2.21786290e-01,  5.51809706e-02, -7.84731954e-02,\n",
-       "        4.32783008e-01, -2.21831188e-01, -1.06169365e-01,  3.63271087e-01,\n",
-       "        5.56787074e-01,  1.24142922e-01, -2.75305584e-02,  4.35806394e-01,\n",
-       "       -3.44588637e-01, -3.84943426e-01,  5.62763035e-01, -3.59015256e-01,\n",
-       "        3.22424620e-01,  4.86777484e-01,  2.95917511e-01, -3.98833007e-02,\n",
-       "        3.97968769e-01,  8.53282437e-02,  3.92173886e-01,  3.45979515e-03,\n",
-       "        9.63835269e-02,  1.76811159e-01, -4.33040172e-01,  3.84064555e-01],\n",
-       "      dtype=float32)"
+       "array([0.        , 0.        , 0.        , 0.05918297, 0.18694402,\n",
+       "       0.4047763 , 0.36202204, 0.        , 0.2620266 , 0.        ,\n",
+       "       0.17632988, 0.        , 0.06801069, 0.        , 0.        ,\n",
+       "       0.3348261 , 0.        , 0.        , 0.        , 0.37690142,\n",
+       "       0.        , 0.10388456, 0.26738852, 0.41767272, 0.        ,\n",
+       "       0.        , 0.14153722, 0.3395241 , 0.        , 0.3961623 ,\n",
+       "       0.        , 0.        , 0.        , 0.15646784, 0.        ,\n",
+       "       0.33516696, 0.        , 0.        , 0.        , 0.        ,\n",
+       "       0.        , 0.        , 0.        , 0.0251322 , 0.09093683,\n",
+       "       0.        , 0.        , 0.15386312, 0.        , 0.00714497,\n",
+       "       0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "       0.23687716, 0.5215511 , 0.        , 0.5802573 , 0.        ,\n",
+       "       0.13039489, 0.        , 0.        , 0.        , 0.5193576 ,\n",
+       "       0.27510637, 0.        , 0.        , 0.        , 0.7473354 ,\n",
+       "       0.2843515 , 0.        , 0.10378544, 0.        , 0.4887553 ,\n",
+       "       0.        , 0.        , 0.        , 0.2296683 , 0.        ,\n",
+       "       0.        , 0.17499603, 0.14653753, 0.        , 0.17336115,\n",
+       "       0.13820483, 0.3118224 , 0.6409181 ], dtype=float32)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data[0][5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(16, 88)\n",
+      "(16, 88)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(data)):\n",
+    "    print(data[i].shape)"
    ]
   },
   {
